# AgroSwarm

./: .gitignore  CLAUDE.md  E2E_OPERATOR_GUIDE.md  LICENSE.md  README.md  codex.md  inject_field_setup.py  isaac_launcher.py  launch_info.txt  launch_sim_e2e.txt  memory.md  reset.sh  scout_launcher.py
CODEXICEK/: FLIGHT_DAY.md  README.md
Pegasus_scenarios/: obstacle_course_spawn.py  simulation_cam.py
docs/: README.md  project_nodes_overview.txt  scout_development_plan.docx  topic_contract.md
launch_files/: README.md  isaac_full_e2e_mission.txt  isaac_obstacle_avoidance_test.txt  isaac_phase12_e2e_test.txt  launch_sim_e2e.txt
perimeters/: field_boundary.json  spawn_origins.json
reports/: README.md
scenarios/: README.md  camera_hud.yaml  camera_view.yaml  field_commander.yaml  full_e2e_mission.yaml  grid_generator_sim.yaml  isaac_e2e_mission.yaml  lidar_bridge.yaml  manual_commander.yaml  ml_interface.yaml  obstacle_avoidance_test.yaml  obstacle_detector.yaml  perimeter_flight.yaml  phase12_e2e_test.yaml  swarm_coordinator.yaml  swarm_field_commander.yaml  swarm_mission.yaml  task_allocator.yaml  terrain_follower.yaml
scripts/: isaac_phase123_checks.sh  isaac_phase12_checks.sh
src/scout_control_msgs/: CMakeLists.txt  package.xml
src/scout_control_msgs/msg/: AvoidanceStatus.msg  DroneHealth.msg  DroneReadiness.msg  PeerTelemetry.msg  TargetCommand.msg
swarm_center/: README.md  main.py  requirements.txt
video/: README.md
worlds/: agro_field.usd  agro_field_overhead.json  agro_field_overlay.json  agro_field_pegasus.usda  drone_agro.usd  gen_overhead.py  (+1 more)
(+203 files in other folders)
